# remora_console

basic_console/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
basic_console/scripts/: basic_console
basic_console/src/basic_console/: basic_console.py  remora_gui.ui
ecu_console/: CMakeLists.txt  package.xml  plugin.xml  setup.py
ecu_console/scripts/: remora_console
ecu_console/src/ecu_console/: ecu_console.py  ecu_console.ui
