<?xml version="1.0"?>
<package>
  <name>ecu_console</name>
  <version>0.0.0</version>
  <description>The remora_console package</description>
  <maintainer email="ThomasBurns88@gmail.com">Thomas Burns</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
